sasapokimica/src/objects/Production_Position__c.object
<CustomObject>
    <description>Persons position in the production process.
Junction object providing many-to-many relationship between Person and Production custom objects</description>
    <fields>
        <fullName>Person__c</fullName>
        <label>Person</label>
        <referenceTo>Person__c</referenceTo>
        <relationshipLabel>Production Positions</relationshipLabel>
        <relationshipName>Production_Positions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Position_Type__c</fullName>
        <label>Position Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actor</fullName>
                </value>
                <value>
                    <fullName>Cinematographer</fullName>
                </value>
                <value>
                    <fullName>Composer</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Lightning</fullName>
                </value>
                <value>
                    <fullName>Make-up Artist</fullName>
                </value>
                <value>
                    <fullName>Musician</fullName>
                </value>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Sound-mixing</fullName>
                </value>
                <value>
                    <fullName>Writter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production__c</fullName>
        <label>Production</label>
        <referenceTo>Production__c</referenceTo>
        <relationshipLabel>Production Positions</relationshipLabel>
        <relationshipName>Production_Positions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Production Position</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ProdPos-{00000}</displayFormat>
        <label>Production Position Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Production Positions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>